--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color:#F8F8F8">
+  <body style="background-color:black">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
